Clean up ModifyAction
Document ModifyAction and modernize it. This allows a number of users to
rely on new interfaces, eliminating interactions with Locale.

Change-Id: If471c823e38c363e06a69cfd05923cdcb2f68a1a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>